patches/0022-pwm-pwm-dwc-Fix-build-error-when-CO.adc-tgpio-pwm-qep-mcan
From 607fa8b87fcb48bbc9f02ec137870d43af0db7c3 Mon Sep 17 00:00:00 2001
From: Jarkko Nikula <jarkko.nikula@linux.intel.com>
Date: Fri, 22 Nov 2019 09:36:47 +0200
Subject: [PATCH 22/32] pwm: pwm-dwc: Fix build error when !CONFIG_PM_SLEEP &&
 CONFIG_PM
MIME-Version: 1.0
Content-Type: text/plain; charset=UTF-8
Content-Transfer-Encoding: 8bit

Fix following build error when CONFIG_PM is set but CONFIG_PM_SLEEP is
not:

drivers/pwm/pwm-dwc.c:334:21: error: ‘dwc_pci_runtime_suspend’ undeclared here (not in a function); did you mean ‘pm_runtime_suspend’?
  334 |  SET_RUNTIME_PM_OPS(dwc_pci_runtime_suspend,
      |                     ^~~~~~~~~~~~~~~~~~~~~~~
./include/linux/pm.h:342:21: note: in definition of macro ‘SET_RUNTIME_PM_OPS’
  342 |  .runtime_suspend = suspend_fn, \
      |                     ^~~~~~~~~~
drivers/pwm/pwm-dwc.c:335:7: error: ‘dwc_pci_runtime_resume’ undeclared here (not in a function); did you mean ‘pm_runtime_resume’?
  335 |       dwc_pci_runtime_resume, NULL)
      |       ^~~~~~~~~~~~~~~~~~~~~~
./include/linux/pm.h:343:20: note: in definition of macro ‘SET_RUNTIME_PM_OPS’
  343 |  .runtime_resume = resume_fn, \
      |                    ^~~~~~~~~

Reported-by: kbuild test robot <lkp@intel.com>
Signed-off-by: Jarkko Nikula <jarkko.nikula@linux.intel.com>
---
 drivers/pwm/pwm-dwc.c | 2 ++
 1 file changed, 2 insertions(+)

diff --git a/drivers/pwm/pwm-dwc.c b/drivers/pwm/pwm-dwc.c
index 280bec19976e..68298dddf001 100644
--- a/drivers/pwm/pwm-dwc.c
+++ b/drivers/pwm/pwm-dwc.c
@@ -313,7 +313,9 @@ static int dwc_pci_resume(struct device *dev)
 
 	return 0;
 }
+#endif
 
+#ifdef CONFIG_PM
 static int dwc_pci_runtime_suspend(struct device *dev)
 {
 	/*
-- 
2.17.1

